Update en composer

--- a/lead-capture-crm-lite/composer.json
+++ b/lead-capture-crm-lite/composer.json
@@ -1,15 +1,21 @@
 {
-  "name": "lead-capture-crm-lite",
+  "name": "lcc/lead-capture-crm-lite",
   "description": "A lightweight WordPress plugin for capturing leads and managing CRM functionalities.",
   "type": "wordpress-plugin",
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    }
+  ],
   "require": {
-    "php": ">=7.4",
+    "php": ">=8.0",
     "composer/installers": "^1.9",
     "wpackagist-plugin/advanced-custom-fields": "^5.9"
   },
   "autoload": {
     "psr-4": {
-      "LeadCaptureCRM\\": "includes/"
+      "LCCRL\\": "includes/"
     }
   },
   "autoload-dev": {
